# Chat

./: .gitignore  README.md
backend/: README.md  setup.cfg
backend/chat/adapters/chat_api/: app.py  auth.py  controllers.py
backend/chat/adapters/storage/: repositories.py  storage.py
backend/chat/application/: entities.py  errrors.py  interfaces.py  services.py
backend/chat/composites/: chat_api.py
backend/tests/: conftest.py
backend/tests/unit/: conftest.py
backend/tests/unit/application/: test_chatservice.py  test_userservice.py
demo_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: db_scheme.puml  precedents.puml
