[metadata]
name = demo-project
version = 1.0.0
description = Демо проект чат
author = Кузьмин Дмитрий
author_email = dk_187@mail.ru
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = ~=3.8

install_requires =
    attrs~=21.2.0
    PyJWT~=2.0.0
    pydantic~=1.8.2
    sqlalchemy~=1.4.23
    alembic~=1.7.0
    gunicorn~=20.0.0
    click~=7.1.0
    python-json-logger~=2.0.0
    classic-components~=0.0.1
    classic-aspects~=0.0.1
    classic-http-api~=0.0.2
    classic-app-layer~=0.0.1
    classic-sql-storage~=0.0.1
    classic-messaging~=0.0.1
    classic-messaging-kombu~=0.0.1

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    isort~=5.10.0
    yapf~=0.32.0

[options.entry_points]
console_scripts =
    simple_shop=simple_shop.composites.cli:cli